--- a/CelebDuel/Main.storyboard
+++ b/CelebDuel/Main.storyboard
@@ -90,25 +90,20 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="COg-iI-PT9">
-                                <rect key="frame" x="201" y="122" width="180" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your full name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="COg-iI-PT9">
+                                <rect key="frame" x="201" y="122" width="146" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FFT-Et-oN7">
-                                <rect key="frame" x="201" y="186" width="180" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FFT-Et-oN7">
+                                <rect key="frame" x="201" y="177" width="146" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lxx-7z-VvO">
-                                <rect key="frame" x="201" y="242" width="180" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pick a screen name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lxx-7z-VvO">
+                                <rect key="frame" x="201" y="236" width="146" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0D6-39-agw">
-                                <rect key="frame" x="201" y="301" width="180" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEw-Ul-rCa">
                                 <rect key="frame" x="46" y="50" width="46" height="30"/>
@@ -135,14 +130,29 @@
                                     <action selector="signUpFired:" destination="PRj-1O-qqt" eventType="touchUpInside" id="Ub7-8U-AQR"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Re-type Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYT-S8-Tp2">
-                                <rect key="frame" x="46" y="365" width="142" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2r-iE-nva">
+                                <rect key="frame" x="46" y="417" width="17" height="17"/>
+                                <state key="normal" image="checkBox">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="checkBoxFired:" destination="PRj-1O-qqt" eventType="touchUpInside" id="YmX-Km-qTn"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I am at least 18 years of age and agree to the Terms and Conditions" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VO6-Er-m4A">
+                                <rect key="frame" x="83" y="388" width="264" height="75"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MQR-yS-eoI">
-                                <rect key="frame" x="201" y="361" width="180" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(6 or more characters, no spaces)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4S-vI-DyK">
+                                <rect key="frame" x="46" y="339" width="301" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="choose a password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0D6-39-agw">
+                                <rect key="frame" x="201" y="296" width="146" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
@@ -151,10 +161,10 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="checkBoxButton" destination="T2r-iE-nva" id="GZx-0t-aIy"/>
                         <outlet property="emailField" destination="FFT-Et-oN7" id="Daw-gJ-uRJ"/>
                         <outlet property="nameField" destination="COg-iI-PT9" id="s7a-kV-253"/>
                         <outlet property="passwordField" destination="0D6-39-agw" id="tQz-kL-zNq"/>
-                        <outlet property="retypePasswordField" destination="MQR-yS-eoI" id="fS0-KN-Wbs"/>
                         <outlet property="usernameField" destination="lxx-7z-VvO" id="xld-5d-hVv"/>
                     </connections>
                 </viewController>
@@ -310,6 +320,9 @@
             <point key="canvasLocation" x="71" y="537"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="checkBox" width="20" height="20"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="bCN-Q3-XyX"/>
     </inferredMetricsTieBreakers>
